[gd_scene load_steps=3 format=3 uid="uid://4p5sxjvqfnet"]

[ext_resource type="Script" uid="uid://jbx61ntvgwuj" path="res://characters/spawn_point.gd" id="1_f8oq1"]
[ext_resource type="PackedScene" uid="uid://d2w4jnlil61ax" path="res://characters/enemy.tscn" id="2_6wqb2"]

[node name="SpawnPoint" type="Node2D"]
script = ExtResource("1_f8oq1")
enemy_scene = ExtResource("2_6wqb2")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(0.8, 0.8)

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
